force-app/main/default/objects/PublicApi_Integration_Config__c/PublicApi_Integration_Config__c.object-meta.xml
<CustomObject>
    <description>Config for PublicApi webhook (API key, webhook secret, default firm/case type). Use one active record per org or per site.</description>
    <label>Public API Integration Config</label>
    <nameField>
        <displayFormat>UIC-{0000000}</displayFormat>
        <label>Public API Integration Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public API Integration Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>