force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Path__c</fullName>
    <defaultValue>&quot;/submissions&quot;</defaultValue>
    <description>Normalized endpoint path suffix for this integration. The full public API URL uses /services/apexrest/v1/publicapi plus this path.</description>
    <label>Endpoint Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>