force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Inbound_Payload_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Payload_Configuration__c</fullName>
    <description>Optional JSON template that maps inbound payload fields into the configured target object.</description>
    <label>Inbound Payload Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>