force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Inbound_Target_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Target_Object_API_Name__c</fullName>
    <description>API name of the Salesforce object created by inbound API requests.</description>
    <label>Inbound Target Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>