force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Last_Webhook_Delivery_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Webhook_Delivery_Attempt__c</fullName>
    <label>Last Webhook Delivery Attempt</label>
    <type>DateTime</type>
</CustomField>