force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Last_Webhook_Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>Last_Webhook_Response_JSON__c</fullName>
    <label>Last Webhook Response JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>