force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Outbound_Additional_Headers_JSON__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Additional_Headers_JSON__c</fullName>
    <description>Optional JSON object or array of name/value pairs that adds custom outbound webhook headers.</description>
    <label>Outbound Additional Headers JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>