force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Outbound_Header_Value__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Header_Value__c</fullName>
    <description>Optional token or credential source value used by the selected outbound auth mode.</description>
    <label>Outbound Header Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>