force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Outbound_Payload_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Payload_Configuration__c</fullName>
    <description>Optional JSON template that reshapes the outbound PublicApi status update payload before delivery.</description>
    <label>Outbound Payload Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>