force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Outbound_Remote_Site_Domain__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Remote_Site_Domain__c</fullName>
    <label>Outbound Remote Site Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>