force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Outbound_Remote_Site_Last_Error__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Remote_Site_Last_Error__c</fullName>
    <label>Outbound Remote Site Last Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>