force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Outbound_Remote_Site_Last_Provisioned_At__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Remote_Site_Last_Provisioned_At__c</fullName>
    <label>Outbound Remote Site Last Provisioned At</label>
    <type>DateTime</type>
</CustomField>