force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Outbound_Remote_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Remote_Site_Name__c</fullName>
    <label>Outbound Remote Site Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>