force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Outbound_Remote_Site_Status__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Remote_Site_Status__c</fullName>
    <label>Outbound Remote Site Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Provisioned</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>