force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Outbound_Source_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Source_Object_API_Name__c</fullName>
    <description>API name of the Salesforce object used to build outbound webhook payloads.</description>
    <label>Outbound Source Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>