force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Outbound_Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Trigger_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, outbound webhook delivery is evaluated for this integration config.</description>
    <label>Outbound Trigger Enabled</label>
    <type>Checkbox</type>
</CustomField>