force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Outbound_Trigger_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Trigger_Field_Name__c</fullName>
    <description>Field name on the target object that should be evaluated for outbound webhook triggering. When blank, Status__c is used.</description>
    <label>Outbound Trigger Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>