force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Outbound_Trigger_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Trigger_Field_Values__c</fullName>
    <description>Comma-separated or JSON-array values for the configured outbound trigger field that should queue outbound webhook delivery. When blank, defaults are used.</description>
    <label>Outbound Trigger Field Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>