force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Outbound_Trigger_Status_Values__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Trigger_Status_Values__c</fullName>
    <description>Comma-separated status values that trigger outbound webhook delivery (for example: Referred Out,Converted). When blank, defaults are used.</description>
    <label>Outbound Trigger Status Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>