force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Referred_By_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Party_Name__c</fullName>
    <description>Name of the Party record to set on Referred_By__c (e.g. PMAX-PublicApi). Looked up by Name; leave blank to not set Referred_By.</description>
    <label>Referred By Party Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>