force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Related_Record_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Configuration__c</fullName>
    <description>Declarative related-record lookup and create rules used during inbound submission creation.</description>
    <label>Related Record Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>