force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Request_Field_Mappings__c.field-meta.xml
<CustomField>
    <fullName>Request_Field_Mappings__c</fullName>
    <description>JSON array of builder-managed field mappings for the public API. Each row defines an external key and a submission field reference, such as $submission.Email__c.</description>
    <label>Request Field Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>