force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Sync_Inbound_And_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Sync_Inbound_And_Outbound__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, the request builder keeps inbound and outbound payload mappings mirrored.</description>
    <label>Sync Inbound And Outbound</label>
    <type>Checkbox</type>
</CustomField>