force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Target_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API_Name__c</fullName>
    <description>API name of the Salesforce object used for both inbound creation and outbound payload field references.</description>
    <label>Target Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>