force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Target_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Type_Developer_Name__c</fullName>
    <description>Optional record type developer name applied to records created for the selected target object.</description>
    <label>Target Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>