force-app/main/default/objects/PublicApi_Integration_Config__c/fields/Webhook_Secret__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Secret__c</fullName>
    <description>Optional. Only set when verifying PublicApi webhook signatures (HMAC-SHA256). Leave blank if not using signature verification.</description>
    <label>Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>