force-app/main/default/objects/PublicApi_Integration_Config__c/listViews/Active_Configs.listView-meta.xml
<ListView>
    <fullName>Active_Configs</fullName>
    <columns>NAME</columns>
    <columns>Endpoint_Path__c</columns>
    <columns>Target_Object_API_Name__c</columns>
    <columns>Target_Record_Type_Developer_Name__c</columns>
    <columns>Outbound_Trigger_Enabled__c</columns>
    <columns>Outbound_Trigger_Field_Name__c</columns>
    <columns>Outbound_Webhook_URL__c</columns>
    <columns>Outbound_Remote_Site_Status__c</columns>
    <columns>Last_Webhook_Delivery_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Configs</label>
</ListView>